--- a/src/components/tabs/styles.module.css
+++ b/src/components/tabs/styles.module.css
@@ -1,8 +1,19 @@
+.tabsComponent {
+  width: 100%;
+}
+
 .tabs {
+  display: flex;
 }
 
 .tab {
+  flex: 1;
+  padding: 5px;
+  text-align: center;
+  border-bottom: 2px solid #333;
+  cursor: pointer;
 }
 
 .tab.active {
+  border-bottom-color: #00d0ff;
 }
